# the_void-engine

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Collision.cpp  Collision.h  Mesh.cpp  Mesh.h  NPC.cpp  NPC.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  main.cpp
scenes/: level1.map
shaders/: fragment.glsl  landscape_fragment.glsl  vertex.glsl
